加入了选择排序，加入了打印数组工具方法

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch SortTest",
+            "request": "launch",
+            "mainClass": "com.fly.ftx.leedcode.swordOffer.array.bootEntry.SortTest",
+            "projectName": "Algorithm_25ffdcaa"
+        },
+        {
+            "type": "java",
             "name": "Launch Test",
             "request": "launch",
             "mainClass": "com.fly.ftx.leedcode.swordOffer.array.bootEntry.Test",
